// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support should match snapshot on desktop 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-jvus1l"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 css-1ovtmav-MuiTypography-root"
      >
        Contact Us
      </h1>
      <div
        class="MuiBox-root css-3k0eht"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
        >
          Got questions? Send us a message and we'll respond as soon as possible.
        </p>
      </div>
      <div
        class="MuiBox-root css-124l85d"
      >
        <div
          class="MuiBox-root css-2rhtyh"
        >
          <div
            class="MuiGrid-root MuiGrid-container css-1kty7fo-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item css-1hn4a1h-MuiGrid-root"
            >
              <svg>
                phone-icon.svg
              </svg>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
                >
                  eCommerce Support
                </h6>
                <div
                  class="MuiGrid-root MuiGrid-container css-moq4ou-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                    >
                      Email:
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                      >
                         ecomsupport@reece.com
                      </span>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                    >
                      Phone:
                    </span>
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    >
                       877-273-3236
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                    >
                      Hours:
                    </span>
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    >
                       M-F: 8:00am - 5:30pm EST
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-ft9ciy"
        >
          <div
            class="MuiGrid-root MuiGrid-container css-1lym95h-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-8 css-idtbpa-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-7mxa2f"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Email Us
                </h5>
                <form
                  class="MuiBox-root css-pxpt32"
                  novalidate=""
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="contact-first-name"
                          id="contact-first-name-label"
                        >
                          First Name
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="contact-first-name-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="firstNameInput"
                            id="contact-first-name"
                            name="firstName"
                            placeholder="First Name"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                First Name
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="firstNameHelper"
                          id="contact-first-name-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="contact-last-name"
                          id="contact-last-name-label"
                        >
                          Last Name
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="contact-last-name-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="lastNameInput"
                            id="contact-last-name"
                            name="lastName"
                            placeholder="Last Name"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Last Name
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="lastNameHelper"
                          id="contact-last-name-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="phone-number"
                          id="phone-number-label"
                        >
                          Phone Number
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="phone-number-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="phoneNumberInput"
                            id="phone-number"
                            name="phoneNumber"
                            placeholder="(000) 000-0000"
                            type="tel"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Phone Number
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-15h6cqt-MuiFormHelperText-root"
                          data-testid="phoneNumberHelper"
                          id="phone-number-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="zip-code"
                          id="zip-code-label"
                        >
                          Zip Code
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="zip-code-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="zipCodeInput"
                            id="zip-code"
                            name="zip"
                            placeholder="00000"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Zip Code
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="zipCodeHelper"
                          id="zip-code-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="email"
                          id="email-label"
                        >
                          Email Address
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="email-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="emailInput"
                            id="email"
                            name="email"
                            placeholder="Enter Email Address"
                            required=""
                            type="email"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Email Address
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="emailHelper"
                          id="email-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                      data-testid="topicContainer"
                    >
                      <label
                        class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-wab5yp-MuiFormLabel-root-MuiInputLabel-root"
                        id="select-label-3"
                      >
                        Topic
                        <span
                          aria-hidden="true"
                          class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                        >
                           
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-1pwnjt2-MuiInputBase-root-MuiInput-root"
                        data-testid="topicSelect"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="topic"
                          class="MuiSelect-select MuiSelect-outlined MuiInput-input MuiInputBase-input css-hb27wf-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                          id="topic"
                          role="button"
                          tabindex="0"
                        >
                          Select
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                          data-testid="topicInput"
                          name="topic"
                          tabindex="-1"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                      <p
                        class="MuiFormHelperText-root css-f30th0-MuiFormHelperText-root"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="message"
                          id="message-label"
                        >
                          Message
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-6b6tax-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <textarea
                            aria-describedby="message-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputMultiline css-cexzcn-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="messageInput"
                            id="message"
                            name="message"
                            required=""
                            rows="3"
                            style="height: 0px; overflow: hidden;"
                          />
                          <textarea
                            aria-hidden="true"
                            class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputMultiline css-cexzcn-MuiInputBase-input-MuiOutlinedInput-input"
                            readonly=""
                            style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding: 0px; width: 100%;"
                            tabindex="-1"
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Message
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="messageHelper"
                          id="message-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-jivcqj-MuiGrid-root"
                    >
                      <div
                        class="MuiBox-root css-18hgb9f"
                      >
                        <button
                          class="MuiLoadingButton-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root css-13eilt-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
                          data-testid="sendButton"
                          id="mui-1"
                          tabindex="0"
                          type="submit"
                        >
                          Send
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support should match snapshot on mobile 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-i8bb5j"
    >
      <h1
        class="MuiTypography-root MuiTypography-h4 css-1yn4jl8-MuiTypography-root"
      >
        Contact Us
      </h1>
      <div
        class="MuiBox-root css-vswxzh"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
        >
          Got questions? Send us a message and we'll respond as soon as possible.
        </p>
      </div>
      <div
        class="MuiBox-root css-hqy74h"
      >
        <div
          class="MuiBox-root css-8atqhb"
        >
          <div
            class="MuiGrid-root MuiGrid-container css-qtjowj-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item css-1hn4a1h-MuiGrid-root"
            >
              <svg>
                phone-icon.svg
              </svg>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-1t7cc9k-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
                >
                  eCommerce Support
                </h6>
                <div
                  class="MuiGrid-root MuiGrid-container css-moq4ou-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                    >
                      Email:
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                      >
                         ecomsupport@reece.com
                      </span>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                    >
                      Phone:
                    </span>
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    >
                       877-273-3236
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                    >
                      Hours:
                    </span>
                    <span
                      class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    >
                       M-F: 8:00am - 5:30pm EST
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
          />
        </div>
        <div
          class="MuiBox-root css-8atqhb"
        >
          <div
            class="MuiGrid-root MuiGrid-container css-1lym95h-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-8 css-idtbpa-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-udyulx"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Email Us
                </h5>
                <form
                  class="MuiBox-root css-xuhmcu"
                  novalidate=""
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-a5rdam-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="contact-first-name"
                          id="contact-first-name-label"
                        >
                          First Name
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="contact-first-name-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="firstNameInput"
                            id="contact-first-name"
                            name="firstName"
                            placeholder="First Name"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                First Name
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="firstNameHelper"
                          id="contact-first-name-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="contact-last-name"
                          id="contact-last-name-label"
                        >
                          Last Name
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="contact-last-name-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="lastNameInput"
                            id="contact-last-name"
                            name="lastName"
                            placeholder="Last Name"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Last Name
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="lastNameHelper"
                          id="contact-last-name-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="phone-number"
                          id="phone-number-label"
                        >
                          Phone Number
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="phone-number-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="phoneNumberInput"
                            id="phone-number"
                            name="phoneNumber"
                            placeholder="(000) 000-0000"
                            type="tel"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Phone Number
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-15h6cqt-MuiFormHelperText-root"
                          data-testid="phoneNumberHelper"
                          id="phone-number-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="zip-code"
                          id="zip-code-label"
                        >
                          Zip Code
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="zip-code-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="zipCodeInput"
                            id="zip-code"
                            name="zip"
                            placeholder="00000"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Zip Code
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="zipCodeHelper"
                          id="zip-code-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="email"
                          id="email-label"
                        >
                          Email Address
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-describedby="email-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="emailInput"
                            id="email"
                            name="email"
                            placeholder="Enter Email Address"
                            required=""
                            type="email"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Email Address
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="emailHelper"
                          id="email-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                      data-testid="topicContainer"
                    >
                      <label
                        class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-wab5yp-MuiFormLabel-root-MuiInputLabel-root"
                        id="select-label-6"
                      >
                        Topic
                        <span
                          aria-hidden="true"
                          class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                        >
                           
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-1pwnjt2-MuiInputBase-root-MuiInput-root"
                        data-testid="topicSelect"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="topic"
                          class="MuiSelect-select MuiSelect-outlined MuiInput-input MuiInputBase-input css-hb27wf-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                          id="topic"
                          role="button"
                          tabindex="0"
                        >
                          Select
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                          data-testid="topicInput"
                          name="topic"
                          tabindex="-1"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                      <p
                        class="MuiFormHelperText-root css-f30th0-MuiFormHelperText-root"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
                      >
                        <label
                          class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="true"
                          for="message"
                          id="message-label"
                        >
                          Message
                          <span
                            aria-hidden="true"
                            class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                          >
                             
                            *
                          </span>
                        </label>
                        <div
                          class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-6b6tax-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <textarea
                            aria-describedby="message-helper-text"
                            aria-invalid="false"
                            class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputMultiline css-cexzcn-MuiInputBase-input-MuiOutlinedInput-input"
                            data-testid="messageInput"
                            id="message"
                            name="message"
                            required=""
                            rows="3"
                            style="height: 0px; overflow: hidden;"
                          />
                          <textarea
                            aria-hidden="true"
                            class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputMultiline css-cexzcn-MuiInputBase-input-MuiOutlinedInput-input"
                            readonly=""
                            style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding: 0px; width: 100%;"
                            tabindex="-1"
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-1z7n62"
                            >
                              <span>
                                Message
                                 
                                *
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                        <p
                          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                          data-testid="messageHelper"
                          id="message-helper-text"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-jivcqj-MuiGrid-root"
                    >
                      <div
                        class="MuiBox-root css-nn3smo"
                      >
                        <button
                          class="MuiLoadingButton-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root css-13eilt-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
                          data-testid="sendButton"
                          id="mui-2"
                          tabindex="0"
                          type="submit"
                        >
                          Send
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
